[tool]
[tool.poetry]
name = "peltak-changelog"
version = "0.0.4"
description = ""
authors = ["Mateusz Klos <novopl@gmail.com>"]
repository = "https://github.com/novopl/peltak-changelog"
homepage = "https://novopl.github.io/peltak-changelog"
documentation = "https://novopl.github.io/peltak-changelog"
license = "Proprietary"
packages = [
    { include = "peltak_changelog", from = "src" },
]
include = ["LICENSE", "AUTHORS", "README.rst", "**/py.typed"]
exclude = ["tests/**", "ops/**", ".venv/**"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.12"
coverage = "^6.5.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
peltak = ">=0.29.0"
psutil = "^5.9.2"
pycodestyle = "^2.9.1"
pylint = "^2.15.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Sphinx = ">=4.3.2"
sphinx-material = "^0.0.35"
sphinx-autodoc-typehints = ">=1.11.1"
peltak-gitflow = {path = "../peltak-gitflow", develop = true}


[tool.pytest.ini_options]
addopts = "--durations=3"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"


[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = ["nocov"]


##################
#     PYLINT     #
##################


[tool.pylint.MASTER]
jobs = 1
ignore = 'migrations'
ignore-patterns = []

[tool.pylint.REPORTS]
output-format = 'colorized'
reports = 'no'

[tool.pylint.'MESSAGES CONTROL']
disable = 'all'
enable = [
    # 'missing-docstring',
    'redefined-builtin',
    'wrong-import-order',
]




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


##################
#     PYTEST     #
##################


